--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "cafes_aleatorios",
+  "name": "al-cafe-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "10.4.5",
-    "bootstrap": "^5.2.0-beta1",
+    "bootstrap": "^5.1.3",
+    "express-middleware": "^3.4.2",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -38,11 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "autoprefixer": "10.4.5"
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5"
   }
 }
