--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "ts-loader": "^9.3.1",
+    "webpack-cli": "^4.10.0"
   }
 }
