--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "eslint-plugin-react": "^7.30.1",
     "express-middleware": "^3.4.2",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.21.1",
     "css-loader": "^6.7.1",
     "ts-loader": "^9.3.1",
     "webpack-cli": "^4.10.0"
